install router and fix a code

--- a/public/index.html
+++ b/public/index.html
@@ -15,7 +15,7 @@
 
   <body class="main" style="background-color:#858585;">
     <!--Navbar-->
-    <nav class="navbar navbar-toggleable-md navbar-light bg-faded" style="background-color:#858585; height:220px;">
+    <!-- <nav class="navbar navbar-toggleable-md navbar-light bg-faded" style="background-color:#858585; height:220px;">
         <div>
             <button class="navbar-toggler navbar-toggler-right" type="button" data-toggle="collapse" data-target="#navbarNavDropdown" aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
               <span class="navbar-toggler-icon"></span>
@@ -26,29 +26,30 @@
               Noote
             </a>
         </div>
+    </nav> -->
+    <div style="text-align:center;height:200px; background-color:rgb(43, 0, 185)">
+        <a style="font-size:40px;color:#ffffff;">공백</a>
+    </div>
 
-
-        <div class="collapse navbar-collapse" id="navbarNavDropdown">
-          <ul class="nav nav-pills">
-            <li class="nav-item active">
-              <a class="nav-link" href="#" style="color:#ffffff;">Home <span class="sr-only">(current)</span></a>
-            </li>
-            <li class="nav-item">
-              <a class="nav-link" href="view.html" style="color:#ffffff;">View</a>
-            </li>
-            <li class="nav-item">
-              <a class="nav-link" href="#" style="color:#ffffff;">Account</a>
-            </li>
-            <li class="nav-item">
-              <a class="nav-link" href="#" style="color:#ffffff;">Setting</a>
-            </li>
-            <li class="nav-item">
-              <a class="nav-link" href="#" style="color:#ffffff;">Exit</a>
-            </li>
-          </ul>
-        </div>
-
-    </nav>
+    <div class="collapse navbar-collapse" id="navbarNavDropdown" style="text-align:center; background-color:#cd1f1f;" >
+      <ul class="nav nav-pills" style="display: inline-block;padding-bottom:30px">
+        <li class="nav-item active" style="display:inline-block;">
+          <a class="nav-link" href="" style="color:#ffffff;">Home <span class="sr-only">(current)</span></a>
+        </li>
+        <li class="nav-item" style="display:inline-block;">
+          <a class="nav-link" href="view.html" style="color:#ffffff;">View</a>
+        </li>
+        <li class="nav-item" style="display:inline-block;">
+          <a class="nav-link" href="account.html" style="color:#ffffff;">Account</a>
+        </li>
+        <li class="nav-item" style="display:inline-block;">
+          <a class="nav-link" href="setting.html" style="color:#ffffff;">Setting</a>
+        </li>
+        <li class="nav-item" style="display:inline-block;">
+          <a class="nav-link" href="#" style="color:#ffffff;">Exit</a>
+        </li>
+      </ul>
+    </div>
 
     <div>
       <div class="sidemenu" style="">
